# perplexia-ai

./: README.md  pyproject.toml  run.py
perplexia_ai/: app.py
perplexia_ai/core/: chat_interface.py
perplexia_ai/week1/: part1.py  part2.py  part3.py
