[tool.poetry]
name = "perplexia-ai"
version = "0.1.0"
description = ""
authors = ["JoseAngel1196 <joseangel1196@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.27"
langgraph = "^0.6.3"
langchain-openai = "^0.3.28"
python-dotenv = "^1.1.1"
gradio = "^5.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
